# hukka

./: .emacs  .rc  .zshrc  Android_Java_and_Smack.md  Apache2OnUbuntu.md  BuildDLL.md  BuildForAndroid.md  EJB.md  GDB_on_device.md  GlassFish.md  ProjectHome.md  komp
alike_row/: input.txt  tables.txt
alike_row/src/: Alike.java
as1313_setup/Setup/: App.xaml.cs  Setup.csproj
chess/client-build-android/: Makefile  qrc_resources.cpp  resources.qrc
chess/qtClient/: .cproject  .project  Makefile  client.pro  hello.pro  module_test_start  orientation  qrc_resources.cpp  readme  resources.qrc  server_socketserver  server_tablemanager  test_start
chess/site1/: about.php  auth.php  check_pwd.php  defines.php  download.php  enable_rating.php  index.php  rating.php  welcome.php  welcome_user.php
chess/wstest/: .cproject  .project  Makefile  tester.h  wstest.cpp
chess2/client/: .cproject
chess2/octopus/: .cproject  .project
client/: client.pro  hello.pro  hello_start  main.cpp  reply_example  test.pro
client/dummy_server/: server.c
client/hello/: hello.cpp
client/server/cpp/gammonserver/bglight/: Makefile.am  bg.cpp  bgdefs.cpp  bgdefs.h  bgmatch.cpp  cubelesseval.h  net_inputs.cpp  neuralnet.h  stdutil.h
client/src/: Client.cpp  Client.h  Exception.h
client/test/: Settings.h  TestClient.h  TestClientLogin.h  TestClientRegisterUser.h  TestClientTable.h  test.cpp
clock_shop/: create_db.sh  create_db.sql  fill_products.sh
clock_shop/scripts/: artikul.txt  categories.txt  change_offers.php  change_offers.sh  change_special_offers.php  copy_to_shared_folder.sh  create.sh  dump.sh  dump.sql  fill_categories.sh  fill_offers.php  fill_offers.sh  fill_products.pl  fill_products.sh  insert_categories.pl  insert_products.pl  mount_shared_folder.sh  my.cnf  new_offers.sql  offers.txt  products.txt  show_discounts.php
clock_shop/shop-script-free/: README.txt  admin.php  category.php  index.php  info.php  products.php
color/: color.cpp
color/include/: color.hpp
common/color/: color.cpp  makefile
database/: База 1.accdb
debug/: debug.cpp  makefile
debug/include/: debug.hpp
dejarik/: .cproject  .project  CMakeLists.txt  configure.in  dejarik.cpp  errors.txt  sites.txt
dejarik/PVRTex/: CPVRTexture.h
dejarik/docs/: ASUS.P320.txt  sites
dejarik/img/: board1.pcx  board1.pvr  board2.pcx  board2.pvr  board3.pcx  dejarik.psd  menu2.pcx
dejarik/img/win4444/: board1.pvr
dejarik/include/: Macros.h
dejarik/mob/: VideoES.cpp  VideoES.h  mob.cpp  mob.sln  mob.vcproj  mobppc.rc2
dejarik/src/: Board.cpp  Board.h  CMakeLists.txt  Cell.h  Game.cpp  Game.h  Macros.h  Makefile.am  Piece.cpp  Piece.h  Player.cpp  Player.h  dejarik.cpp  main.cpp
dejarik/src/common/: Cell.cpp  Cell.h  System.cpp  System.h
dejarik/src/glfix/: gl.h
dejarik/src/glfix/GLES/: glext.h
dejarik/src/logic/: Board.cpp  Board.h  Cell.cpp  Cell.h  Game.cpp  Game.h  Piece.h  Player.cpp  Player.h  main.cpp
dejarik/src/system/: BMP.cpp  BMP.h  Macros.h  System.cpp  System.h  Window.cpp  Window.h  main.cpp
dejarik/src/ui/: Animation.cpp  Animation.h  CellImage.cpp  CellImage.h  Glbasic.cpp  Glbasic.h  UI.cpp  UI.h  Video.cpp  Video.h  Window.cpp
dejarik/test/: CMakeLists.txt  Makefile.am  TestAnimation.h  TestBoard.h  TestGame.cpp  TestGame.h  TestPlayer.h  Test___.h  dejarik_test.cpp  test.cpp
dejarik/win/111/: 111.h
driver/: .project  README  restart.sh  test.sh  view.sh
driver/lpt_write_test/: 000  111  111.c  333  led.c  makefile  run_test
driver/src/: hello.c  (+1 more)
erlang/: db.erl
erlkonig/: client.erl  makefile  parser.erl  reg.erl  server.erl  server.sh  start.sh
fastwrite/: start
formatter/: data.h  makefile  parser.cpp  parser.h
getter/: getter.cpp  header.h
jabber/: AndroidManifest.xml  android_start  build.xml
makeincl/: makefile.MacOSX  makefile.exec  makefile.lib  makefile.scan  makefile.vars
microtimer/: microtimer.c  start
molotok/: .cproject  .project  CMakeLists.txt
molotok/src/: UI.cpp  UI.h  Video.cpp  Video.h
purser/: .cproject  .project  restart.sh  restart_receiver.sh  send.sh
short/: examples  restart.sh
speed/: ipconfig.cpp  makefile  ping.cpp  speed.cpp
temp/: makefile  temp.cpp
template_driver/: book  configure.sh
tree/: makefile
trunk/: .rc  CppCodeTemplateForEnterpriseArchitect.xml  howmany  makefile  rc  run
trunk/dejarik/: .cproject  .project  CMakeLists.txt  Makefile  configure.in  dejarik.pro  errors.txt  makefile_clean  sites.txt
trunk/dejarik/PVRTex/: CPVRTextureData.h  CPVRTextureHeader.h  PVRTexLib.h  PVRTexLibGlobals.h  singleton.h
trunk/dejarik/dejarik_mob/: dejarik_mob.sln  dejarik_mob.vcproj
trunk/dejarik/img/: board1.pvr  board2.pcx  board4.pcx  dejarik.psd  menu1.pcx
trunk/dejarik/img/win565/: board1.pvr
trunk/dejarik/include/: Macros.h
trunk/dejarik/mob/: VideoES.cpp  VideoES.h  mob.cpp  mob.vcproj  mobppc.rc
trunk/dejarik/rules/: index.htm
trunk/dejarik/src/: Board.cpp  Board.h  Cell.h  Game.cpp  Game.h  Macros.h  Makefile.am  Piece.cpp  Piece.h  Player.cpp  Player.h  dejarik.cpp  main.cpp
trunk/dejarik/src/common/: Cell.cpp  Cell.h  Macros.h  System.cpp  System.h
trunk/dejarik/src/logic/: Board.cpp  Board.h  Cell.cpp  Cell.h  Game.cpp  Game.h  Piece.h  Player.cpp  Player.h  main.cpp
trunk/dejarik/src/system/: BMP.cpp  BMP.h  System.cpp  System.h  Window.cpp  Window.h  main.cpp  stdafx.cpp
trunk/dejarik/src/ui/: Animation.cpp  Animation.h  Glbasic.cpp  Glbasic.h  PieceImage.h  UI.cpp  UI.h  Video.cpp  Video.h  Window.cpp
trunk/dejarik/test/: TestAnimation.h  TestBoard.h  TestGame.h  TestPlayer.h  dejarik_test.cpp  test.cpp
trunk/dejarik/ui/: ui.cpp
trunk/dejarik/win/111/: 111.cpp
trunk/fastwrite/: CMakeLists.txt  bonobo
trunk/fastwrite/hello/: config.txt  config.xml  hello  hello.c  hello.cpp  start
trunk/fastwrite/hello_app/: FastwriteApplet_Factory.server  config.txt  fastwrite.cpp
trunk/fastwrite/lib/tinyxml/: tinystr.h
trunk/fastwrite/src/: fastwrite.cpp
wiki/: Apache2OnUbuntu.wiki  BuildDLL.wiki  BuildForAndroid.wiki  EJB.wiki  GDB_on_device.wiki  GlassFish.wiki
(+1174 files in other folders)
