INCLUDES = -I$(top_srcdir)/xoserver -I ../bglight/bgcore
METASOURCES = AUTO
lib_LIBRARIES = libbglight.a
libbglight_a_SOURCES = bg.cpp bg.h bgdefs.cpp bgdefs.h bgmatch.cpp bgmatch.h\
	compiler.h cubelesseval.cpp cubelesseval.h danalyze.cpp danalyze.h\
	debug.h equities.cpp equities.h moves.cpp moves.h mt19937int.cpp\
	mt19937int.h net_inputs.cpp net_inputs.h neuralnet.cpp neuralnet.h\
	rand.cpp rand.h sanity.cpp sanity.h stdutil.h systypes.h
